# begging_hackerton_server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.py  settings.py
.github/workflows/: main.yml
database/: config.py  connection.py  models.py
database/sql/: master.sql
src/auth/: auth.py
src/game/repository/: game.py
src/products/application/: products.py
src/products/dtos/: dtos.py
src/products/repository/: products.py
src/router/: auth.py  category.py  game.py  product.py  user.py
src/user/application/: user.py
src/user/repository/: users.py
src/utils/: images.py
