[tool.poetry]
name = "vinyl-search-server"
version = "0.1.0"
description = ""
authors = ["Lee Dong WOok <sh95119@gmail.com>"]
readme = "README.md"
packages = [{include = "begging_hackerton_server"}]


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
fastapi = "^0.99.0"
uvicorn = "^0.22.0"
sqlmodel = "^0.0.8"
asyncpg = "^0.28.0"
greenlet = "^2.0.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
